--- a/functions/package.json
+++ b/functions/package.json
@@ -9,7 +9,7 @@
     "logs": "firebase functions:log"
   },
   "engines": {
-    "node": "22"
+    "node": "20"
   },
   "main": "index.js",
   "dependencies": {
@@ -18,6 +18,7 @@
     "firebase-admin": "^12.6.0",
     "firebase-functions": "^6.1.0",
     "node-cache": "^5.1.2",
+    "playwright": "^1.48.1",
     "puppeteer": "^23.6.0",
     "sharp": "^0.33.5"
   },
